--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
         .content img, .content video {
             width: 100%;
             max-width: 100%;
-            margin-top: 15px;
-            border-radius: 10px;
         }
 
         /* Estilo das seções */
@@ -59,12 +57,12 @@
 
         #informacoes {
             background-color: #8e44ad; /* Roxo mais escuro */
-            color: #fff;
+            color: white;
         }
 
         #curiosidades {
             background-color: #9b59b6; /* Roxo */
-            color: #fff;
+            color: white;
         }
 
         #imagens {
@@ -115,24 +113,22 @@
     <section id="imagens">
         <h2>Imagens</h2>
         <div class="content">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Tangled_Poster.svg/800px-Tangled_Poster.svg.png" alt="Pôster do Filme Enrolados">
-            <img src="https://vignette.wikia.nocookie.net/disney/images/6/64/Rapunzel_-_Enrolados.jpg/revision/latest?cb=20190726013152&path-prefix=pt-br" alt="Rapunzel e Flynn Rider">
-            <img src="rapunzel.webp" alt="Rapunzel, Flynn e Maximus no barco com lanternas ao fundo">
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a8/Tangled_poster.jpg/440px-Tangled_poster.jpg" alt="Pôster do Filme Enrolados">
+            <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-1h9slk1_4379b453.jpeg" alt="Rapunzel com a frigideira">
         </div>
     </section>
 
     <section id="videos">
         <h2>Vídeos</h2>
         <div class="content">
-            <p>Confira um trecho do filme no YouTube:</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/S5VfkgC8YcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            <p>Ou assista ao vídeo enviado:</p>
-            <video controls width="560">
-                <source src="rapunzel video.mp4" type="video/mp4">
-                Seu navegador não suporta a tag de vídeo.
+            <!-- Aqui você pode adicionar um vídeo local, se quiser -->
+            <video controls>
+                <source src="video/enrolados-trecho.mp4" type="video/mp4">
+                Seu navegador não suporta a reprodução de vídeo.
             </video>
         </div>
     </section>
 </body>
 </html>
+        
+       
