--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #fdf6e3;
+      background-color: #fdf6f9;
       color: #333;
     }
 
     header {
-      background-color: #4a0072; /* Roxo forte */
+      background-color: #6a1b9a; /* Roxo escuro */
       padding: 10px 0;
       text-align: center;
     }
 
     header nav a {
-      color: #fff8dc;
+      color: #fff8f9;
       text-decoration: none;
       margin: 0 15px;
       padding: 8px 15px;
@@ -28,7 +28,7 @@
     }
 
     header nav a:hover {
-      background-color: #7b1fa2; /* Roxo vivo */
+      background-color: #8e24aa; /* Roxo médio */
     }
 
     section {
@@ -51,26 +51,27 @@
     }
 
     #home {
-      background-color: #ffd700; /* Dourado forte */
+      background-color: #e91e63; /* Rosa forte */
       text-align: center;
+      color: white;
     }
 
     #informacoes {
-      background-color: #6a1b9a; /* Roxo intenso */
+      background-color: #8e24aa; /* Roxo médio */
       color: #fff;
     }
 
     #curiosidades {
-      background-color: #8e24aa; /* Roxo vibrante */
+      background-color: #ab47bc; /* Roxo mais claro */
       color: #fff;
     }
 
     #imagens {
-      background-color: #ffcc00; /* Dourado vibrante */
+      background-color: #ec407a; /* Rosa mais claro */
     }
 
     #videos {
-      background-color: #f4b400; /* Dourado escuro */
+      background-color: #f06292; /* Rosa claro */
     }
 
     h1, h2 {
@@ -137,4 +138,6 @@
 </body>
 </html>
 
-           
+
+ 
+ 
