--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       padding: 0;
     }
 
+    .banner {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
     header {
       background-color: #d1c4e9; /* Roxo fraco */
       padding: 20px;
@@ -76,6 +82,10 @@
   </style>
 </head>
 <body>
+
+  <!-- Banner no topo -->
+  <img src="rapunzel.webp" alt="Banner de Enrolados" class="banner" />
+
   <header>
     <h1>Enrolados - O Filme</h1>
     <nav>
@@ -128,6 +138,4 @@
 </body>
 </html>
 
-
     
-   
