--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -20,7 +21,7 @@
     }
 
     header {
-      background-color: #d1c4e9; /* Roxo fraco */
+      background-color: #d1c4e9;
       padding: 20px;
       text-align: center;
     }
@@ -47,7 +48,7 @@
     }
 
     #home {
-      background-color: #f8bbd0; /* Rosa bebê */
+      background-color: #f8bbd0;
     }
 
     #informacoes {
@@ -84,7 +85,7 @@
 <body>
 
   <!-- Banner no topo -->
-  <img src="rapunzel.webp" alt="Banner de Enrolados" class="banner" />
+  <img src="images/rapunzel.webp" alt="Banner de Enrolados" class="banner" />
 
   <header>
     <h1>Enrolados - O Filme</h1>
@@ -122,7 +123,7 @@
   <section id="imagens">
     <h2>Imagem</h2>
     <div class="content">
-      <img src="rapunzel.webp" alt="Imagem de Rapunzel" />
+      <img src="images/rapunzel.webp" alt="Imagem de Rapunzel" />
     </div>
   </section>
 
@@ -130,12 +131,11 @@
     <h2>Vídeo</h2>
     <div class="content">
       <video controls>
-        <source src="rapunzel video.mp4" type="video/mp4" />
+        <source src="videos/rapunzel video.mp4" type="video/mp4" />
         Seu navegador não suporta o vídeo.
       </video>
     </div>
   </section>
 </body>
 </html>
-
-    
+   
