--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -8,10 +7,9 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #fff0f5;
-      color: #333;
       margin: 0;
       padding: 0;
+      background: linear-gradient(to right, #f8bbd0 50%, #d1c4e9 50%);
     }
 
     .banner {
@@ -84,8 +82,8 @@
 </head>
 <body>
 
-  <!-- Banner no topo -->
-  <img src="images/rapunzel.webp" alt="Banner de Enrolados" class="banner" />
+  <!-- Banner com imagem -->
+  <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/Tangled_poster.jpg/800px-Tangled_poster.jpg" alt="Banner de Enrolados" class="banner" />
 
   <header>
     <h1>Enrolados - O Filme</h1>
@@ -123,7 +121,7 @@
   <section id="imagens">
     <h2>Imagem</h2>
     <div class="content">
-      <img src="images/rapunzel.webp" alt="Imagem de Rapunzel" />
+      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/Tangled_poster.jpg/800px-Tangled_poster.jpg" alt="Imagem de Rapunzel" />
     </div>
   </section>
 
@@ -131,11 +129,13 @@
     <h2>Vídeo</h2>
     <div class="content">
       <video controls>
-        <source src="videos/rapunzel video.mp4" type="video/mp4" />
+        <source src="rapunzel video.mp4" type="video/mp4" />
         Seu navegador não suporta o vídeo.
       </video>
     </div>
   </section>
 </body>
 </html>
-   
+
+
+     
