--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 </head>
 <body>
 
-  <!-- Banner com imagem -->
-  <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/Tangled_poster.jpg/800px-Tangled_poster.jpg" alt="Banner de Enrolados" class="banner" />
+  <!-- Imagem com arquivo local -->
+  <img src="rapunzel.webp" alt="Banner de Enrolados" class="banner" />
 
   <header>
     <h1>Enrolados - O Filme</h1>
@@ -121,7 +121,7 @@
   <section id="imagens">
     <h2>Imagem</h2>
     <div class="content">
-      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/Tangled_poster.jpg/800px-Tangled_poster.jpg" alt="Imagem de Rapunzel" />
+      <img src="rapunzel.webp" alt="Imagem de Rapunzel" />
     </div>
   </section>
 
@@ -136,3 +136,5 @@
   </section>
 </body>
 </html>
+
+     
