--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Enrolados - O Filme</title>
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/5/5f/Tangled_logo.svg">
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/5/5f/Tangled_logo.svg"/>
 
   <style>
-    /* Fundo com gradiente rosa bebê e roxo claro */
     body {
       margin: 0;
       font-family: 'Arial', sans-serif;
@@ -16,17 +15,29 @@
       overflow-x: hidden;
     }
 
-    /* Efeito de brilho no fundo */
-    .glow-background {
+    /* Brilho e estrelas */
+    .glow-background, .stars {
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       pointer-events: none;
+      z-index: 0;
+    }
+
+    .glow-background {
       background-image: radial-gradient(white 1px, transparent 1px);
       background-size: 50px 50px;
       opacity: 0.2;
       animation: sparkle 4s linear infinite;
+    }
+
+    .stars {
+      background: url('https://media.tenor.com/yheo1GGu3FwAAAAC/space-stars.gif') repeat;
+      background-size: cover;
+      opacity: 0.1;
+      animation: starsMove 20s linear infinite;
     }
 
     @keyframes sparkle {
@@ -34,12 +45,18 @@
       100% { background-position: 50px 50px; }
     }
 
+    @keyframes starsMove {
+      from { background-position: 0 0; }
+      to { background-position: 1000px 1000px; }
+    }
+
     header {
       text-align: center;
       padding: 20px;
       background-color: rgba(74, 20, 140, 0.8);
       color: white;
-      box-shadow: 0 0 10px #ba68c8;
+      z-index: 2;
+      position: relative;
     }
 
     header img {
@@ -51,7 +68,6 @@
       color: white;
       text-decoration: none;
       font-weight: bold;
-      transition: color 0.3s, text-shadow 0.3s;
     }
 
     nav a:hover {
@@ -61,16 +77,8 @@
     section {
       padding: 40px 20px;
       text-align: center;
-    }
-
-    h2 {
-      font-size: 2em;
-      margin-bottom: 10px;
-      transition: text-shadow 0.4s ease;
-    }
-
-    h2:hover {
-      text-shadow: 0 0 20px #ffffff;
+      z-index: 2;
+      position: relative;
     }
 
     .content img, .content video {
@@ -84,17 +92,42 @@
       padding: 20px;
       background-color: rgba(74, 20, 140, 0.7);
       color: white;
-      margin-top: 30px;
+      z-index: 2;
+      position: relative;
+    }
+
+    /* Animação de Rapunzel mexendo o cabelo */
+    .rapunzel-img {
+      width: 300px;
+      animation: cabelo 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes cabelo {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(2deg); }
+    }
+
+    /* Flynn com fade-in */
+    .flynn-img {
+      width: 250px;
+      opacity: 0;
+      animation: aparecer 4s ease-in forwards;
+      animation-delay: 2s;
+    }
+
+    @keyframes aparecer {
+      to { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; transform: translateY(30px); }
     }
   </style>
 </head>
 <body>
 
-  <!-- Fundo com brilhos -->
+  <div class="stars"></div>
   <div class="glow-background"></div>
 
   <header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Tangled_logo.svg" alt="Logo Enrolados">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Tangled_logo.svg" alt="Logo Enrolados" />
     <nav>
       <a href="#home">Home</a>
       <a href="#informacoes">Informações</a>
@@ -126,7 +159,9 @@
   <section id="imagens">
     <h2>Imagens</h2>
     <div class="content">
-      <img src="rapunzel.webp" alt="Imagem de Rapunzel">
+      <img src="https://static.wikia.nocookie.net/disney/images/7/75/Rapunzel_Tangled.png" alt="Rapunzel animada" class="rapunzel-img">
+      <br><br>
+      <img src="https://static.wikia.nocookie.net/disney/images/f/fc/Flynn_Rider_pose.png" alt="Flynn animado" class="flynn-img">
     </div>
   </section>
 
@@ -134,7 +169,7 @@
     <h2>Vídeo</h2>
     <div class="content">
       <video controls>
-        <source src="rapunzel video.mp4" type="video/mp4">
+        <source src="rapunzel video.mp4" type="video/mp4" />
         Seu navegador não suporta vídeo.
       </video>
     </div>
@@ -143,7 +178,7 @@
   <footer>
     <p>Site feito com 💜 e magia por você!</p>
   </footer>
-
 </body>
 </html>
+
  
