--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   </section>
 
   <footer>
-    <p>Site feito com 💜 e magia por você!</p>
+    <p>Site feito com 💜 e magia pra você!</p>
   </footer>
 
 </body>
